--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,6 @@
 {
   "version": "0.2.0",
   "configurations": [
-    
     {
       "name": "C/C++ Runner: Debug Session",
       "type": "cppdbg",
@@ -9,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": false,
-      "cwd": "/home/arun/open-printing/Braille-printer-app -lpappl -lcups -lcupsfilters",
-      "program": "/home/arun/open-printing/Braille-printer-app/build/Debug/outDebug",
+      "cwd": "/home/arun/testBRF/Braille-Printer-PAPPL",
+      "program": "/home/arun/testBRF/Braille-Printer-PAPPL/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
