--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Ignore specific object files
 brf-printer-app.o
 generic-brf.o
+brf-printer-app
 
 # Ignore test files and build folders
 test_files/
